--- a/index.html
+++ b/index.html
@@ -368,6 +368,15 @@
                     <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
                 </svg>
             </a>
+            <a href="https://scholar.google.com/citations?user=hopVRUUAAAAJ&hl=en" target="_blank" rel="noopener noreferrer" class="social-btn" title="Google Scholar">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path fill="currentColor" d="M256 411.12L0 202.667 256 0z"/>
+                    <path fill="currentColor" d="M256 411.12l256-208.453L256 0z"/>
+                    <circle fill="currentColor" cx="256" cy="362.667" r="149.333"/>
+                    <path fill="currentColor" d="M121.037 298.667c23.968-50.453 75.392-85.334 134.963-85.334s110.995 34.881 134.963 85.334H121.037z" style="fill: var(--secondary-color, #1e2749);"/>
+                </svg>
+            </a>
+
             <a href="https://manateeofmanatees.substack.com/" target="_blank" rel="noopener noreferrer" class="social-btn" title="Substack">
                 <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15 3.604H1v1.891h14v-1.89zM1 7.208V16l7-3.926L15 16V7.208zM15 0H1v1.89h14V0z"/>
