--- a/index.html
+++ b/index.html
@@ -440,6 +440,8 @@
         <p>I occasionally <a href="https://manateeofmanatees.substack.com/">write</a> 
             about topics in AI and linguistics that interest me.
         </p>
+        <p>You can contact me by <a href="mailto:avi.semler@outlook.com">email</a>!</p>
+
         <h2>Publications</h2>
         <ol>
             <li>
